# Algoritmy_I_project

./: AllLists.cpp  AllLists.h  CMakeLists.txt  Doxyfile  List.cpp  List.h  functions.cpp  main  main.cpp
